test/syntax-errors/somme_entiere.sos
# somme entiere vide n'est pas valide

id = $( expr )